--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/compiler": "~10.0.14",
     "@angular/core": "~10.0.14",
     "@angular/forms": "~10.0.14",
+    "@angular/localize": "^10.0.14",
     "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
     "@angular/youtube-player": "^10.2.0",
     "bootstrap": "^4.5.2",
+    "moment": "^2.29.0",
     "ngx-youtube-player": "^9.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
